--- a/tools/tclwinhelp.html
+++ b/tools/tclwinhelp.html
@@ -8,7 +8,7 @@
 </style>
 </head>
 <body>
-<h1>Tcl Windows Help (V 2015.05.01)</h1>
+<h1>Tcl Windows Help (V 2017.11.18)</h1>
 <p>This is a compilation of the documentation for Tcl/Tk and the most commonly
 used extensions and libraries on Windows. Advantages over various other
 documentation sources are:
@@ -43,17 +43,17 @@ documentation sources are:
 
 <p>Documentation for the following distributions are included:
 <ul>
-  <li>Tcl/Tk 8.6.4</li>
-  <li>Tcl Windows API 4.1.27</li>
-  <li>Tcllib 1.17</li>
+  <li>Tcl/Tk 8.6.7</li>
+  <li>Tcl Windows API 4.2.12</li>
+  <li>Tcllib 1.18+ Snapshot</li>
   <li>Tklib 0.6+ Snapshot</li>
-  <li>Thread 2.7.0</li>
+  <li>Thread 2.8.0</li>
   <li>Tcl Database Connectivity (TDBC) 1.0</li>
-  <li>TDOM 0.8.3 Snapshot</li>
+  <li>TDOM 0.9</li>
 </ul>
 
 
 <h2><a name="copyright" id="copyright">COPYRIGHT</a></h2>
-<p>Copyright &copy; 2015 Ashok P. Nadkarni (Compilation only)<br></p>
+<p>Copyright &copy; 2017 Ashok P. Nadkarni (Compilation only)<br></p>
 </body>
 </html>
