Permit anchors to be empty and pick up text from parent. Add RBC

--- a/tools/tclwinhelp.html
+++ b/tools/tclwinhelp.html
@@ -51,6 +51,7 @@ documentation sources are:
   <li>Tcl Database Connectivity (TDBC) 1.0.6</li>
   <li>TDOM 0.9.1</li>
   <li>Sqlite3 3.22</li>
+  <li>RBC 0.1.1</li>
 </ul>
 
 
